# yahoo-equity-crawler

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: FLUXO_TECNICO.md
scripts/: debug_state_path.py
src/yahoo_crawler/: cli.py  config.py  logging_conf.py
src/yahoo_crawler/domain/: errors.py  models.py
src/yahoo_crawler/infrastructure/browser/: driver_factory.py  waits.py
src/yahoo_crawler/infrastructure/yahoo/: navigator.py  parser.py  quote_client.py  screener_client.py
src/yahoo_crawler/service/: run_crawl.py
src/yahoo_crawler/utils/: money.py
tests/fixtures/: quotes_state.json  screener_page_0.json  screener_page_25.json
tests/unit/: test_parser.py  test_quote_client.py  test_run_crawl_source.py  test_screener_client.py
